2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: In ToString, get the correct
	member count.

	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs: Use correct
	binary operator for logic or.

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs: Make
	sure instantiated types are created only for generic types. Should
	fix bug #467410.

2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs: Fixed
	ReadToolsVersion. The version number wasn't properly read.

2009-01-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Project.cs: Fix local copy path for external
	files.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs: Fixed type
	proxy.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs: fixed 'Bug
	466337 - Incorrect intelisense for class attribute'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: fixed markup bug.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Added some markup
	features for ambiences.

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom/TypeUpdateInformation.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Provide the
	project reference when in the TypesUpdated event.

	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Avoid using
	delegates when not really necessary.

	* MonoDevelop.Projects.Dom.Output/Ambience.cs: Optimized.
	GetString(Modifiers) now stores results in a cached.

2009-01-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Allow setting invalid
	(!library) compile target for library projects while loading. Fixes
	"Bug 459502 - Impossible to load ASP.NET projects created with MD
	1.0".
